# livetranslate

./: .env.example  .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
livetranslate/: flow.py  fullscreen_gui.py  gui.py  lang_utils.py  main.py  mic.py  translate.py
livetranslate/tests/: test_lang_utils.py
