[project]
name = "livetranslate"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
    "websockets==12.0",
    "google-cloud-translate==3.12.1",
    "PySide6==6.6.0",
    "PyAudio==0.2.14",
    "aiohttp==3.9.1",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[project.optional-dependencies]
dev = [
    "pyright==1.1.337",
    "ruff==0.1.6",
]

